; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/wireless/intersil/hostap/extr_hostap_ioctl.c_prism2_get_datarates.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/wireless/intersil/hostap/extr_hostap_ioctl.c_prism2_get_datarates.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.net_device = type { i32 }
%struct.hostap_interface = type { %struct.TYPE_4__* }
%struct.TYPE_4__ = type { %struct.TYPE_3__* }
%struct.TYPE_3__ = type { i32 (%struct.net_device*, i32, i32*, i32, i32)* }

@HFA384X_RID_SUPPORTEDDATARATES = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.net_device*, i32*)* @prism2_get_datarates to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @prism2_get_datarates(%struct.net_device* %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.net_device*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca %struct.hostap_interface*, align 8
  %7 = alloca %struct.TYPE_4__*, align 8
  %8 = alloca [12 x i32], align 16
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  store %struct.net_device* %0, %struct.net_device** %4, align 8
  store i32* %1, i32** %5, align 8
  %11 = load %struct.net_device*, %struct.net_device** %4, align 8
  %12 = call %struct.hostap_interface* @netdev_priv(%struct.net_device* %11)
  store %struct.hostap_interface* %12, %struct.hostap_interface** %6, align 8
  %13 = load %struct.hostap_interface*, %struct.hostap_interface** %6, align 8
  %14 = getelementptr inbounds %struct.hostap_interface, %struct.hostap_interface* %13, i32 0, i32 0
  %15 = load %struct.TYPE_4__*, %struct.TYPE_4__** %14, align 8
  store %struct.TYPE_4__* %15, %struct.TYPE_4__** %7, align 8
  %16 = load %struct.TYPE_4__*, %struct.TYPE_4__** %7, align 8
  %17 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %16, i32 0, i32 0
  %18 = load %struct.TYPE_3__*, %struct.TYPE_3__** %17, align 8
  %19 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %18, i32 0, i32 0
  %20 = load i32 (%struct.net_device*, i32, i32*, i32, i32)*, i32 (%struct.net_device*, i32, i32*, i32, i32)** %19, align 8
  %21 = load %struct.net_device*, %struct.net_device** %4, align 8
  %22 = load i32, i32* @HFA384X_RID_SUPPORTEDDATARATES, align 4
  %23 = getelementptr inbounds [12 x i32], [12 x i32]* %8, i64 0, i64 0
  %24 = call i32 %20(%struct.net_device* %21, i32 %22, i32* %23, i32 48, i32 0)
  store i32 %24, i32* %9, align 4
  %25 = load i32, i32* %9, align 4
  %26 = icmp slt i32 %25, 2
  br i1 %26, label %27, label %28

27:                                               ; preds = %2
  store i32 0, i32* %3, align 4
  br label %47

28:                                               ; preds = %2
  %29 = getelementptr inbounds [12 x i32], [12 x i32]* %8, i64 0, i64 0
  %30 = load i32, i32* %29, align 16
  %31 = call i32 @le16_to_cpu(i32 %30)
  store i32 %31, i32* %10, align 4
  %32 = load i32, i32* %9, align 4
  %33 = sub nsw i32 %32, 2
  %34 = load i32, i32* %10, align 4
  %35 = icmp slt i32 %33, %34
  br i1 %35, label %39, label %36

36:                                               ; preds = %28
  %37 = load i32, i32* %10, align 4
  %38 = icmp sgt i32 %37, 10
  br i1 %38, label %39, label %40

39:                                               ; preds = %36, %28
  store i32 0, i32* %3, align 4
  br label %47

40:                                               ; preds = %36
  %41 = load i32*, i32** %5, align 8
  %42 = getelementptr inbounds [12 x i32], [12 x i32]* %8, i64 0, i64 0
  %43 = getelementptr inbounds i32, i32* %42, i64 2
  %44 = load i32, i32* %10, align 4
  %45 = call i32 @memcpy(i32* %41, i32* %43, i32 %44)
  %46 = load i32, i32* %10, align 4
  store i32 %46, i32* %3, align 4
  br label %47

47:                                               ; preds = %40, %39, %27
  %48 = load i32, i32* %3, align 4
  ret i32 %48
}

declare dso_local %struct.hostap_interface* @netdev_priv(%struct.net_device*) #1

declare dso_local i32 @le16_to_cpu(i32) #1

declare dso_local i32 @memcpy(i32*, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
